--- a/Lenguaje_de_marcas/mangak/loggin.html
+++ b/Lenguaje_de_marcas/mangak/loggin.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MangaK</title>
+        <title>MangaK Logging</title>
         <link rel="stylesheet" href="styles/style.css"/>
+        <link rel="stylesheet" href="styles/formulario.css">
         <link rel="icon" href="images/iconos/icon.ico" type="ico">
         <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
@@ -15,19 +16,35 @@
 
         <!-- Titulo / header -->
         <header>
-            <h1 id="inicioPagina" class="neonText"><a href="index.html">ERROR!</a></h1>
-            <p>"Return to menu"</p>
+            <h1 id="inicioPagina" class="neonText"><a href="index.html">Logging</a></h1>
+            <p>"Inicia sesion en la pagina o crea perfil"</p>
         </header>
 
 
-<main class="error">
-    <section>
-        <h1>ERROR!</h1>
-        <p>What is the error?</p>
-        <p>Website:</p>
-        <img src="https://media.tenor.com/VNj0eJnLplgAAAAM/elmo-shrug.gif" alt="">
-    </section>
-</main>
+
+        <form class="formulario" action="/login" method="post">
+            <label for="username">Usuario:</label>
+            <input type="text" id="username"  pattern="[a-zA-Z0-9]{2,12}" name="username" required><br><br>
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" required><br><br>
+            <input type="submit" value="Iniciar Sesión">
+          </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
         <!-- Footer pag sim -->
