--- a/Lenguaje_de_marcas/mangak/index.html
+++ b/Lenguaje_de_marcas/mangak/index.html
@@ -34,9 +34,9 @@
     <!-- Barra de navegacion -->
     <nav id="mainNav">
         <ul>
-            <li><a href="error.html">Populares</a></li>
-            <li><a href="error.html">Nuevos</a></li>
-            <li><a href="error.html">Géneros</a>
+            <li><a href="navContent/popular.html">Populares</a></li>
+            <li><a href="navContent/new.html">Nuevos</a></li>
+            <li><a href="#">Géneros</a>
                 <!-- Desplegable / Generos -->
                 <ul class="generos">
                     <li><input type="checkbox" id="gender1"> <label for="gender1">Acción</label></li>
@@ -90,8 +90,8 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="error.html">Noticias </a></li>
-            <li><a href="error.html">Biblioteca </a></li>
+            <li><a href="navContent/news.html">Noticias </a></li>
+            <li><a href="navContent/library.html">Biblioteca </a></li>
         </ul>
 
         <!-- Barra de busqueda -->
@@ -122,7 +122,8 @@
             <section class="avatar">
                 <p>Usuario</p>
                 <!-- <img src="images/iconos/userAvatar.jpg" alt=""> -->
-                <img src="https://images.vexels.com/media/users/3/147102/isolated/preview/082213cb0f9eabb7e6715f59ef7d322a-icono-de-perfil-de-instagram.png" alt="">
+                <img src="https://images.vexels.com/media/users/3/147102/isolated/preview/082213cb0f9eabb7e6715f59ef7d322a-icono-de-perfil-de-instagram.png"
+                    alt="">
             </section>
 
             <li><a href="error.html">Perfil</a></li>
@@ -563,6 +564,6 @@
 ⣿⣿⣿⣿⣿⣿⣿⣿⡀⠉⠀⠀⠀⠀⠀⢄⠀⢀⠀⠀⠀⠀⠉⠉⠁⠀⠀⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿
-     -->
+-->
 
 </html>
